add partial forms support